Tue May 18 00:21:34 1999  Zack Weinberg  <zack@rabi.phys.columbia.edu>

	* lang-specs.h: Define __GNUC__ and __GNUC_MINOR__ only if -no-gcc
	was not given.

1999-05-10 18:21 -0400  Zack Weinberg  <zack@rabi.phys.columbia.edu>

	* lang-specs.h: Pass -$ to the preprocessor.

Tue May  4 14:52:53 1999  Dave Brolley  <brolley@cygnus.com>

	* actions.c (chill_expand_assignment): Use powersetlen to calculate the
	length of an array of packed bits.

Tue Apr 20 23:37:01 1999   Nathan Sidwell  <nathan@acm.org>

	* Make-lang.in (ch/chill.info): Put MAKEINFO parameters in correct
	order.

Wed Apr 14 21:07:30 1999  Mumit Khan  <khan@xraylith.wisc.edu>

	* config-lang.in (compilers): Add exeext.
	(stagestuff): Likewise.

Fri Apr  2 15:49:44 1999  Jeffrey A Law  (law@cygnus.com)

        * Make-lang.in (CHILL_FLAGS_TO_PASS): Do not pass $(CC).

Wed Mar 31 10:44:47 1999  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

        * Makefile.in (hash.h): Generate using gperf language 'C', not
        'KR-C', so gperf uses the `const' keyword on strings.
	 
        * gperf (resword): Const-ify a char*.

Sun Mar 28 00:30:36 1999  Jeffrey A Law  (law@cygnus.com)

	* Make-lang.in (CHILL.dvi): New target.
	(CHILL.mostlyclean): Remove remnants of old runtime library structure.

1999-02-20  Craig Burley  <craig@jcb-sc.com>

	* Make-lang.in (CHILL.info): Depend on intermediate ch/chill.info
	target instead of the chill.texi file.
	(ch/chill.info): New target, depends on the chill.texi source file.
	Its command writes ch/chill.info instead of chill.info.
	(CHILL.install-info): Install from ch/chill.info instead of
	chill.info.
	If any ch/chill.info* files exist, delete *all* chill.info* files
	in $infodir first, not just the ones corresponding to the
	files to be installed (just in case the docs get smaller).

Sun Jan 31 20:34:29 1999  Zack Weinberg  <zack@rabi.columbia.edu>

	* decl2.c: Don't define flag_no_ident here.  Don't process
	-f(no-)ident here.